Modified the scss functions utility file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Social Media Dashboard Dark Light Toggle</title>
 
   <!-- Google fonts -->
 
@@ -29,6 +29,8 @@
   </style>
 </head>
 <body>
+
+  <h1>Social Media Dashboard</h1>
 
   Social Media Dashboard
   Total Followers: 23,004
@@ -95,7 +97,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Agbortoko Arreychuck</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Agbortoko">Agbortoko Arreychuck</a>.
   </div>
 
 </body>
