--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <script defer src="/dist/js/script.min.js"></script>
 
+  
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -30,10 +31,32 @@
 </head>
 <body>
   <header class="header container">
-    <h1>  Social Media Dashboard</h1>
-    Total Followers: 23,004
+
+    <section class="header__title">
+      <h1>  Social Media Dashboard</h1>
+      <span class="header__subtitle">Total Followers: 23,004</span>
+    </section>
   
-    Dark Mode
+    <fieldset class="header__toggle toggle" aria-label="theme toggle" role="radiogroup">
+
+        <label for="dark">Dark Mode</label>
+
+        <section class="toggle__wrapper">
+  
+          <input type="radio" name="theme" id="dark">
+          <input type="radio" name="theme" id="system" checked />
+          <input type="radio" name="theme" id="light" />
+          
+          <span aria-hidden="true" class="toggle__background"></span>
+          <span aria-hidden="true" class="toggle__switcher"></span>
+  
+        </section>
+
+        <label for="system">System Mode</label>
+        <label for="light">Light Mode</label>
+
+    </fieldset>
+
 
   </header>
 
