Readme file changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social Media Dashboard Dark Light Toggle</title>
+  <title>Frontend Mentor | Social media dashboard with theme switcher solution</title>
   <meta property="og:url"          content="" />
   <meta property="og:type"         content="website" />
   <meta property="og:title"        content="Frontend Mentor | Social Media Dashboard Dark Light Toggle" />
