Added toggle label change on change

--- a/index.html
+++ b/index.html
@@ -45,14 +45,9 @@
     <fieldset class="header__toggle toggle" aria-label="theme toggle" role="radiogroup">
 
  
-        <label class="toggle__label" for="dark">Dark Mode
+        <label class="toggle__label" id="toggle_label" for="dark">Dark Mode
           <span class="screenreader-only">On</span>
-        </label>
-
-        <label class="screenreader-only" for="light">
-          Dark Mode Off
-        </label>
-      
+        </label> 
 
 
       <section class="toggle__wrapper">
