index.html structure corrected

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <main>
 
-    <section class="container grid grid-gap-30">
+    <div class="container grid grid-gap-30">
 
         <div class="card card--facebook">
             <header class="card__header">
@@ -165,12 +165,12 @@
             </footer>
         </div>
 
-    </section>
+      </div>
 
     <section class="container">
       <h2>Overview - Today</h2>
 
-      <section class="grid grid-gap-30">
+      <div class="grid grid-gap-30">
   
           <div class="card card-grid">
   
@@ -301,7 +301,8 @@
           </div>
   
   
-      </section>
+      </div>
+      
     </section>
   
 
