Added input radio label for light mode radio
For the sake of removing unwanted accessibility errors

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <span class="screenreader-only">On</span>
         </label> 
 
+        <!-- For the sake of accessibility -->
+        <label class="screenreader-only" id="toggle_label" for="light">Dark Mode Off</label> 
+
 
       <div class="toggle__wrapper">
 
