Corrected duplicate id issue in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </label> 
 
         <!-- For the sake of accessibility -->
-        <label class="screenreader-only" id="toggle_label" for="light">Dark Mode Off</label> 
+        <label class="screenreader-only" for="light">Dark Mode Off</label> 
 
 
       <div class="toggle__wrapper">
