Placed comments on Open graph meta tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="description" content="Frontend Mentor Social media dashboard with theme switcher solution">
 
-
+  <!-- Open Graph Meta tags good for social media sharing -->
   <meta property="og:url"         content="" />
   <meta property="og:type"        content="website" />
   <meta property="og:title"       content="Frontend Mentor | Social Media Dashboard Dark Light Toggle" />
